Align RuoYi 6.X service tests with tenant bridge boundary